# STT_comparison_tool

./: .dockerignore  .env.example  .gitignore  API_CONTRACT.md  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/agents/fenster/: charter.md  history.md
.squad/agents/hockney/: charter.md  history.md
.squad/agents/keaton/: charter.md  history.md
.squad/agents/mcmanus/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/casting/: history.json  policy.json  registry.json
.squad/decisions/: decisions.md
.squad/identity/: now.md  wisdom.md
backend/: __init__.py  config.py  main.py  setup_wizard.py
backend/models/: schemas.py
backend/routers/: transcribe.py  upload.py
backend/services/: __init__.py  aoai_transcribe.py  azure_stt_batch.py  azure_stt_fast.py  base.py  llm_speech.py  mai_transcribe.py  voxtral_transcribe.py  whisper_transcribe.py
backend/utils/: audio.py  storage.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  player.js
infra/: README.md  deploy.sh  main.bicep  main.bicepparam  main.json
infra/modules/: container-app-env.bicep  container-app.bicep  container-registry.bicep  mai-speech.bicep  openai.bicep  role-assignments.bicep  speech.bicep  storage.bicep
tests/: __init__.py  conftest.py  test_audio.py  test_ffmpeg.py  test_health.py  test_services.py  test_transcribe.py  test_upload.py
uploads/: .gitkeep
(+3 files in other folders)
